# MEMOIR

./: .gitignore  LICENSE  README.md  analyze_drift.py  diagnose_drift_correlation.py  diagnose_drift_correlation_baseline.py  eval.py  logger.py  losses.py  memoir_kaggle_session1.ipynb  memoir_kaggle_session2.ipynb  pyproject.toml  train.py  utils.py
baselines/: __init__.py  add_titles_to_samples.py  add_windows.py  bert4rec.py  cl4srec.py  cllmrec.py  duorec.py  filter_dataset.py  gru4rec.py  llm_ranker.py  preprocess_data.py  sample_dataset.py  sasrec.py  sasrec_text.py  sracl.py  tallrec.py  train_baseline.py  unisrec.py
configs/: default.yaml  memoir.yaml
data/: __init__.py  amazon.py  collator.py  mind.py  movielens.py  temporal.py
model/: __init__.py  evolution_contrastive.py  item_encoder.py  memoir.py  memory_encoder.py  reasoning.py  retriever.py  trajectory.py
scripts/: collect_results.py  download_data.sh  preprocess_amazon.py  preprocess_amazon.sh  preprocess_mind.py  preprocess_mind.sh  run_all_baselines.sh  run_all_experiments.sh  train.sh  train_memoir.sh
