[project]
name = "memoir"
version = "0.1.0"
description = "Temporal Behavioral Memory for Recommendation Across the Preference-Drift Spectrum"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.19.0",
]
search = [
    "faiss-cpu>=1.8.0",
]
experiment = [
    "wandb>=0.17.0",
    "matplotlib>=3.8.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]


[tool.ruff]
line-length = 100
target-version = "py311"
